# CIS4020

./: .gitignore  README.md  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml
config/: config.yaml
src/: main.py  process_data.py
src/utils/: config.py  file.py  info.py  processing.py
tests/: test_example.py  test_file.py
